fix textarea text wrap

--- a/components/Textarea.module.scss
+++ b/components/Textarea.module.scss
@@ -18,7 +18,7 @@
   transition: 200ms ease all;
   padding: 16px 16px 16px 16px;
   text-overflow: ellipsis;
-  white-space: nowrap;
+  white-space: wrap;
   box-shadow: 0 1px 4px rgba(0, 0, 0, 0.07);
 
   &:focus {
